--- a/jsadvance_02/DOM_01.html
+++ b/jsadvance_02/DOM_01.html
@@ -31,9 +31,10 @@
       </p>
       <input type="password">
       <ul>
-        <li>one</li>
-        <li>two</li>
-        <li>three</li>
+        <li class="list-item" >one</li>
+        <li class="list-item">two</li>
+        <li class="list-item">three</li>
+        <li class="list-item">four</li>
       </ul>
     </div>
   </body>
