--- a/jsadvance_05/apirequest.html
+++ b/jsadvance_05/apirequest.html
@@ -12,12 +12,12 @@
     2	HEADERS_RECEIVED	send() has been called, and headers and status are available.
     3	LOADING	Downloading; responseText holds partial data.
     4	DONE	The operation is complete. -->
-    <div class = "card" id = 'contain'>
+    <!-- <div class = "card" id = 'contain'>
          <div id="profile"></div>
          <h3 id = 'followers'></h3>
          <p id = 'para'></p>   
         </div>
-        <button id ='btn'  style ="width: 100px; height: 50px; border-radius:10px ; border: 2px solid red; margin: 2px; padding: 2px"></button>
+        <button id ='btn'  style ="width: 100px; height: 50px; border-radius:10px ; border: 2px solid red; margin: 2px; padding: 2px"></button> -->
 </body>
-  <script src="api2.js"></script>
+  <script src="callandthis.js"></script>
 </html>
