carousel img project

--- a/jsadvance_05/apirequest.html
+++ b/jsadvance_05/apirequest.html
@@ -19,5 +19,5 @@
         </div>
         <button id ='btn'  style ="width: 100px; height: 50px; border-radius:10px ; border: 2px solid red; margin: 2px; padding: 2px"></button> -->
 </body>
-  <script src="callandthis.js"></script>
+  <script src="api2.js"></script>
 </html>
